force-app/main/default/objects/MAA_Admin_Settings__c/MAA_Admin_Settings__c.object-meta.xml
<CustomObject>
    <description>Storing market area alerts settings for Location,Case and Quote Page</description>
    <label>MAA Admin Setting</label>
    <nameField>
        <displayFormat>MAA-{000}</displayFormat>
        <label>MAA Admin Settings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MAA Admin Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>