force-app/main/default/objects/MAA_Admin_Settings__c/fields/Allow_Filtering_by_LOB__c.field-meta.xml
<CustomField>
    <fullName>Allow_Filtering_by_LOB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Filtering by LOB</label>
    <type>Checkbox</type>
</CustomField>