force-app/main/default/objects/MAA_Admin_Settings__c/fields/MAA_Page_Type__c.field-meta.xml
<CustomField>
    <fullName>MAA_Page_Type__c</fullName>
    <label>MAA Page Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>