force-app/main/default/objects/MAA_Admin_Settings__c/listViews/All_List.listView-meta.xml
<ListView>
    <fullName>All_List</fullName>
    <columns>MAA_Page_Type__c</columns>
    <columns>Number_of_Alerts_Per_Page__c</columns>
    <columns>Number_of_Days_of_Alerts__c</columns>
    <columns>Allow_Filtering_by_LOB__c</columns>
    <columns>Allow_Filtering_by_Equipment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All List</label>
</ListView>